--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wifi-pay",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://gitname.github.io/wifi-pay",
   "dependencies": {
     "@craco/craco": "^6.1.2",
     "@headlessui/react": "^1.3.0",
@@ -18,7 +19,9 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "gh-pages": "^3.2.3",
     "postcss": "^7.0.36",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.4"
   }
